[package]
name = "attributes_attestation"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.17"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.39", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
predicates = "3.1.3"
rand = "0.8"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
